# Proyecto_IA-Ecomision

./: .gitignore  ProyectoEcomision.ipynb  README.md  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bin_rules.json  (+1 more)
docs/: FASE_4_DISENO_VISUAL.md  arquitectura_mvp_android.md  fase3_pipeline_ml.md
gradle/: libs.versions.toml
ml/: README.md  pyproject.toml  requirements.txt
ml/configs/datasets/: waste_dataset.v1.yaml
ml/configs/experiments/: detector_v1.yaml  state_classifier_v1.yaml
ml/configs/export/: android_export_v1.yaml
ml/configs/rules/: bin_rules.co_generic_v1.yaml
ml/configs/taxonomy/: waste_taxonomy.v1.yaml
ml/data/interim/: split_map.json
ml/data/processed/classifier_v1/: calibration.csv  test.csv
ml/data/processed/detector_v1/: data.yaml
ml/data/processed/detector_v1/labels/train/: scene_0001_view_01.txt  scene_0001_view_02.txt
ml/data/raw/: sample_manifest.jsonl
ml/reports/: sample_validation.json  split_summary.json
ml/scripts/: build_classifier_dataset.py  build_detector_dataset.py  evaluate_active_vision.py  evaluate_classifier.py  evaluate_detector.py  export_android_assets.py  export_models.py  init_dataset_manifest.py  make_splits.py  train_detector.py  train_state_classifier.py  validate_dataset.py
ml/src/ecosort_ml/: __init__.py  paths.py  schema.py
ml/src/ecosort_ml/android/: assets.py
ml/src/ecosort_ml/data/: manifest.py  taxonomy.py  validation.py
ml/src/ecosort_ml/training/: classifier_utils.py  multiview.py  splits.py  uncertainty.py
(+45 files in other folders)
